python/src/tests/exceptions/ill-typed/ambiguous-throw-type-3.stella
language core;

extend with #exceptions, #exception-type-declaration;

exception type = Nat

fn main(n : Nat) -> fn(Bool) -> Nat {
  return (fn (b : Nat) { return  throw(0) })(true)
}